basic recipes setup

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,8 +14,8 @@
             Recipes
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">View My Recipes</a></li>
-            <li><a class="dropdown-item" href="#">New Recipe</a></li>
+            <li><a class="dropdown-item" href="/recipes">View My Recipes</a></li>
+            <li><a class="dropdown-item" href="/recipes/new">New Recipe</a></li>
           </ul>
         </li>
       </ul>
