--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: recipe) do |form| %>
+<%= form_with(model: recipe, id: 'new_recipe_form') do |form| %>
   <% if recipe.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
@@ -26,6 +26,10 @@
     <%= form.text_field :author_last %>
   </div>
 
+  <button type="button" id="add_ingredient_button">Add Ingredient</button>
+  <div id="ingredients_container" class="d-flex flex-column">
+  </div>
+
   <div>
     <%= form.label :instructions, style: "display: block" %>
     <%= form.text_area :instructions %>
@@ -40,3 +44,6 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+<%= javascript_include_tag 'new_recipe' %>
+<%= stylesheet_link_tag 'new_recipe' %>
