--- a/app/views/recipes/_recipedisplay.html.erb
+++ b/app/views/recipes/_recipedisplay.html.erb
@@ -18,4 +18,7 @@
     <strong>Public:</strong>
     <%= recipe.public %>
   </p>
+  <% ingredients.each do |ingredient| %>
+    <p><%= ingredient.inspect %></p>
+  <% end %>
 </div>
